Fix footer spacing

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -581,8 +581,8 @@ $content-width: $page-width - $sidebar-width - $col-spacing;
     font-size: 10px;
 
     .copyright {
-      margin-top: 12px;
-      margin-bottom: 12px;
+      margin-top: 4px;
+      margin-bottom: 4px;
     }
 
     a {
